<resources>
    <string name="app_name">Ashton And Mansion App</string>
    <string name="manager_main_page_header">Management</string>
    <string name="shift_management_main_page_header">Shift Management</string>
    <string name="shifts_activity_header_str">Shifts</string>
    <string name="appt_page">Appointments</string>
    <string name="appointments_heading_str">Appointments</string>
    <string name="add_appt_page_header">Add an Appointment</string>
    <string name="add_appointment_button">Add an Appointment</string>
    <string name="add_appointment_cxl_btn_str">Cancel</string>
    <string name="appt_datepicker_label_str">Appointment Date: </string>
    <string name="appt_timepicker_label_str">Appointment Time: </string>
    <string name="appt_duration_label_str">Appointment Duration: </string>
    <string name="appt_duration_hint">\? Hours</string>
    <string name="appt_alert_type_label_str">Alert Type: </string>
    <string name="appt_cust_code_label_str">Customer Code</string>
    <string name="appt_item_code_label_str">Item Code</string>
    <string name="appt_note_label_str">Appointment Notes</string>
    <string name="appt_emp_1_label_str">Employee 1 Assigned</string>
    <string name="appt_emp_2_label_str">Employee 2 Assigned</string>
    <string name="appt_confirm_status_label_str">Initial Confirmation Status</string>
    <string name="appt_item_code_hint">[Item Code]</string>
    <string name="appt_customer_code_hint">[Customer Code]</string>
    <string name="appt_emp_1_assigned_hint">[Employee 1]</string>
    <string name="appt_emp_2_assigned_hint">[Employee 2]</string>
    <string name="alert_type_prompt">Please select an alert type</string>
    <string-array name="alert_types">
        <item>Text</item>
        <item>Email</item>
    </string-array>
    <string name="appt_confirm_status_prompt">Current status: </string>
    <string-array name="appt_confirm_status_types">
        <item>Confirmed</item>
        <item>Rescheduled</item>
        <item>Etc</item>
    </string-array>
    <string name="header_appt_table_appt_ID">ID</string>
    <string name="header_appt_table_appt_date">Date</string>
    <string name="header_appt_table_appt_time">Time</string>
    <string name="header_appt_table_appt_duration">Hours</string>
    <string name="header_appt_table_appt_customer_code">Customer Code</string>
    <string name="header_appt_table_appt_alert_type">Alert Type</string>
    <string name="header_appt_table_appt_item_code">Item Code</string>
    <string name="header_appt_table_appt_note">Note</string>
    <string name="header_appt_table_appt_emp_1">Employee 1</string>
    <string name="header_appt_table_appt_emp_2">Empl. 2</string>
    <string name="header_appt_table_appt_status">Status</string>
    <string name="test_insertApptWS_btn_str">Test Insert Appt WS</string>
    <string name="label_cust_page_btn">Customers</string>
    <string name="customer_page_header_label_str">Customers</string>
    <string name="add_customer_btn_string">Add Customer</string>
    <string name="customers_activity_name_header">Name</string>
    <string name="customers_activity_phone_numbers_header">Phone Numbers</string>
    <string name="customers_activity_email_addresses_header">Phone Numbers</string>
    <string name="customers_activity_addresses_header">Phone Numbers</string>
    <string name="no_customer_data_warning_str">No Customer Data! Please Add</string>
    <string name="add_customer_header_str">Add Customer</string>
    <string name="customer_first_name_prompt_str">First Name</string>
    <string name="customer_last_name_prompt_str">Last Name</string>
    <string name="customer_phone_prompt_str">Phone</string>
    <string name="customer_email_prompt_str">Email</string>
    <string name="customer_address_prompt_str">Address</string>
    <string name="customer_address_1_prompt_str">Address 1</string>
    <string name="customer_address_2_prompt_str">Address 2</string>
    <string name="customer_address_3_prompt_str">Address 3</string>
    <string name="customer_city_prompt_str">City</string>
    <string name="customer_state_prompt_str">State</string>
    <string name="customer_zip_prompt_str">Zip Code</string>
    <string name="customer_insert_btn_str">Add Customer</string>
    <string name="customer_marketing_allowed_prompt_str">Marketing Allowed</string>
    <string name="edit_customer_header_str">Edit Customer</string>
    <string name="save_edit_customer_btn_str">Save Edits</string>
    <string name="edit_customer_no_first_name_str">[No First Name Provided]</string>
    <string name="edit_customer_no_last_name_str">[No Last Name Provided]</string>
    <string name="edit_customer_no_phoneNumbers_str">[No Phone Numbers on File]</string>
    <string name="edit_customer_no_emailAddresses_str">[No Email Addresses on File]</string>
    <string name="edit_customer_no_addresses_str">[No Addresses on File]</string>
    <string name="employees_heading_str">Employees</string>
    <string name="employee_page_btn_str">Employees</string>
    <string name="add_employee_btn_str">Add Employee</string>
    <string name="add_employee_header_str">Add Employee</string>
    <string name="add_employee_name_label_str">Name</string>
    <string name="edit_employee_name_label_str">Edit Name</string>
    <string name="add_employee_name_hint_str">[Name]</string>
    <string name="add_employee_nickname_label_str">Nickname</string>
    <string name="edit_employee_nickname_label_str">Edit Nickname</string>
    <string name="add_employee_nickname_hint_str">[Nickname]</string>
    <string name="add_employee_role_label_str">Role</string>
    <string name="edit_employee_role_label_str">Edit Role</string>
    <string name="add_employee_pin_label_str">Login PIN</string>
    <string name="edit_employee_pin_label_str">Edit Login PIN</string>
    <string name="add_employee_pin_hint_str">[PIN]</string>
    <string name="edit_employee_pin_hint_str">[PIN]</string>
    <string name="add_employee_email_label_str">Email</string>
    <string name="edit_employee_email_label_str">Edit Email</string>
    <string name="add_employee_email_hint_str">[Email]</string>
    <string name="edit_employee_email_hint_str">[Email]</string>
    <string name="employee_insert_btn_str">Add Employee</string>
    <string name="employee_modify_btn_str">Save Employee Edits</string>
    <string name="employee_delete_btn_str">Delete Employee</string>
    <string name="employee_table_ID_header">Employee ID</string>
    <string name="employee_table_name_header">Employee Name</string>
    <string name="employee_table_email_header">Employee Email</string>
    <string name="employee_table_role_header">Employee Role</string>
    <string-array name="employee_roles_array">
        <item>admin</item>
        <item>Employee</item>
        <item>Manager</item>
    </string-array>
    <string name="clear_employee_table_btn_str">Clear Employee Table(test)</string>
    <string name="schedule_employee_btn_str">Employee Scheduling</string>
    <string-array name="employee_for_scheduling_array">
        <item>Employee_1</item>
        <item>Employee_2</item>
        <item>Employee_3</item>
    </string-array>
    <string name="edit_employee_header_str">Edit Employee</string>
    <string name="items_heading">Inventory Items</string>
    <string name="inventory_page_heading_str">Inventory</string>
    <string name="inventory_page_btn_str">Inventory</string>
    <string name="inventory_table_name_header_str">Item Name</string>
    <string name="inventory_table_modifier_header_str">Modifier</string>
    <string name="inventory_table_product_code_header_str">Product Code</string>
    <string name="inventory_table_sku_header_str">SKU</string>
    <string name="inventory_table_price_header_str">Price</string>
    <string name="add_inventory_item_btn_str">Add Item</string>
    <string name="add_inventory_save_btn_str">Save Item</string>
    <string name="add_inventory_header_str">Add Item</string>
    <string name="add_item_name_label_str">Item Name:</string>
    <string name="add_item_showInRegister_label_str">Show in Register</string>
    <string name="add_item_nonRevenueItem_label_str">Non-revenue Item</string>
    <string name="add_item_price_label_str">Price:</string>
    <string name="add_item_price_radio_fixed_str">Fixed</string>
    <string name="add_item_price_radio_variable_str">Variable</string>
    <string name="add_item_price_radio_perUnit_str">Per Unit</string>
    <string name="add_item_prodCode_label_str">Product Code:</string>
    <string name="add_item_prodCode_hint_str">[Product Code]</string>
    <string name="add_item_sku_label_str">SKU:</string>
    <string name="add_item_sku_hint_str">[SKU]</string>
    <string name="add_item_taxes_label_str">Taxes:</string>
    <string name="add_item_modifiers_label_str">Modifiers:</string>
    <string name="add_item_categories_label_str">Categories:</string>
    <string name="add_item_labels_label_str">Labels:</string>
    <string name="add_item_editTaxes_btn_str">Edit Taxes:</string>
    <string name="add_item_editModifiers_btn_str">Edit Modifiers:</string>
    <string name="add_item_editCategories_btn_str">Edit Categories:</string>
    <string name="add_item_editLabels_btn_str">Edit Labels:</string>
    <string name="add_item_price_hint">$0.00</string>
    <string name="inventory_item_name_hint">[Item Name]</string>
    <string name="no_inventory_available_message">No inventory ; Please Add!</string>
    <string name="settings_screen_header_str">Edit Settings"</string>
    <string name="action_settings">Settings</string>
    <string name="settings_btn_str">Edit Settings</string>
    <string name="settings_max_appt_hours_label_str">Maximum Permissible Hours Alloted to Appointment? </string>
    <string name="settings_advance_alert_days_label_str">Days in advance that alert is sent? </string>
    <string name="settings_alert_time_of_day_label_str">Alert Time of Day? </string>
    <string name="settings_weekday_alerts_only_label_str">Weekday Alerts Only </string>
    <string name="settings_holiday_alerts_label_str">Avoid Holiday Alerts </string>
    <string name="settings_default_appt_duration_label_str">Default appointment duration? </string>
    <string name="save_settings_btn_str">Save Settings and Return</string>
    <string name="add_btn_str">Add</string>
    <string name="add_inventory_cancel_btn_str">Cancel</string>
    <string name="add_employee_cancel_btn_str">Cancel</string>
    <string name="add_customer_cancel_btn_str">Cancel</string>
    <string name="edit_customer_cancel_btn_str">Cancel</string>
    <string name="edit_string_for_buttons">Edit</string>
    <string name="delete_string_for_buttons">Delete</string>
    <string-array name="yes_no_string_array">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string name="edit_shift_activity_header_str">Edit Shift Activity</string>
    <string name="edit_shift_template_header_week">Week</string>
    <string name="edit_shift_template_header_sunday">SUN</string>
    <string name="edit_shift_template_header_monday">MON</string>
    <string name="edit_shift_template_header_tuesday">TUE</string>
    <string name="edit_shift_template_header_wednesday">WED</string>
    <string name="edit_shift_template_header_thursday">THU</string>
    <string name="edit_shift_template_header_friday">FRI</string>
    <string name="edit_shift_template_header_saturday">SAT</string>
</resources>