<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:stretchColumns="*"
    tools:context="com.ashtonmansion.ashtonmansioncloverapp.activity.employee.EditEmployeeActivity">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/id_edit_employee_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_employee_header_str"
            android:textAlignment="center"
            android:textColor="@color/white" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/edit_employee_name_prompt"
            android:text="@string/edit_employee_name_label_str" />

        <EditText
            android:id="@+id/edit_employee_name_field"
            android:hint="@string/add_employee_name_hint_str"
            android:maxLength="48"
            android:textAlignment="center" />

    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/edit_employee_nickname_prompt"
            android:text="@string/edit_employee_nickname_label_str" />

        <EditText
            android:id="@+id/edit_employee_nickname_field"
            android:hint="@string/add_employee_nickname_hint_str"
            android:maxLength="26"
            android:textAlignment="center" />
    </TableRow>

    <TableRow
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/edit_employee_role_prompt"
            android:text="@string/edit_employee_role_label_str" />

        <Spinner
            android:id="@+id/edit_employee_role_spinner"
            android:entries="@array/employee_roles_array"
            android:textAlignment="center" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/edit_employee_pin_prompt"
            android:text="@string/edit_employee_pin_label_str" />

        <EditText
            android:id="@+id/edit_employee_pin_field"
            android:hint="@string/edit_employee_pin_hint_str"
            android:inputType="numberPassword"
            android:maxLength="4"
            android:textAlignment="center" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/edit_employee_email_prompt"
            android:text="@string/edit_employee_email_label_str" />

        <EditText
            android:id="@+id/edit_employee_email_field"
            android:hint="@string/edit_employee_email_hint_str"
            android:inputType="textWebEmailAddress"
            android:textAlignment="center" />
    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/cancel_edit_employee_btn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="cancelEditEmployee"
            android:paddingBottom="@dimen/main_btn_vertical_margin"
            android:paddingTop="@dimen/main_btn_vertical_margin"
            android:text="@string/add_employee_cancel_btn_str"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/submit_employee_edits_btn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="beginEmployeeModification"
            android:paddingBottom="@dimen/main_btn_vertical_margin"
            android:paddingTop="@dimen/main_btn_vertical_margin"
            android:text="@string/employee_modify_btn_str" />
    </TableRow>
</TableLayout>