<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:stretchColumns="*"
    tools:context="com.ashtonmansion.ashtonmansionapp.activity.AddInventoryActivity">

    <TableRow>

        <TextView
            android:id="@+id/add_inventory_header"
            android:onClick="displayAddInventory"
            android:text="@string/add_inventory_header_str" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/add_item_field_label"
            android:text="@string/add_item_name_label_str" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/add_item_showInRegister_label"
            android:text="@string/add_item_showInRegister_label_str" />

        <TextView
            android:id="@+id/add_item_nonRevenueItem_label"
            android:text="@string/add_item_nonRevenueItem_label_str" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/add_item_price_label"
            android:text="@string/add_item_price_label_str" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/add_item_prodCode_label"
            android:text="@string/add_item_prodCode_label_str" />

        <EditText
            android:id="@+id/add_item_prodCode"
            android:hint="@string/add_item_prodCode_label_str" />

        <TextView
            android:id="@+id/add_item_sku_label"
            android:text="@string/add_item_sku_label_str" />

        <EditText
            android:id="@+id/add_item_sku"
            android:hint="@string/add_item_sku_label_str" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/add_item_taxes_label"
            android:text="@string/add_item_taxes_label_str" />

        <TextView
            android:id="@+id/add_item_current_taxes_view"
            android:hint="figure this out" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/add_item_modifiers_label"
            android:text="@string/add_item_modifiers_label_str" />

        <Button />
    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/cancel_add_inventory_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="cancelAddInventory"
            android:paddingBottom="@dimen/main_btn_vertical_margin"
            android:paddingTop="@dimen/main_btn_vertical_margin"
            android:text="@string/cancel_btn_str" />

        <Button
            android:id="@+id/add_inventory_finalize_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="finalizeAddInventory"
            android:paddingBottom="@dimen/main_btn_vertical_margin"
            android:paddingTop="@dimen/main_btn_vertical_margin"
            android:text="@string/inventory_insert_btn_str" />
    </TableRow>
</TableLayout>
