<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:stretchColumns="*"
    tools:context=".activity.AddCustomerActivity">

    <TableRow>

        <TextView
            android:id="@+id/id_add_customer_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:text="@string/add_customer_header_str"
            android:textAlignment="center" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/customer_first_name_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customer_first_name_prompt_str" />

        <EditText
            android:id="@+id/customer_first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/customer_first_name_prompt_str"
            android:maxLength="30" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/customer_last_name_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customer_last_name_prompt_str" />

        <EditText
            android:id="@+id/customer_last_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/customer_last_name_prompt_str"
            android:maxLength="30" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/customer_marketing_allowed_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customer_marketing_allowed_prompt_str" />

        <CheckBox
            android:id="@+id/customer_marketing_allowed_chkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/customer_phone_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customer_phone_prompt_str" />

        <EditText
            android:id="@+id/customer_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/customer_phone_prompt_str"
            android:inputType="phone"
            android:maxLength="10" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/customer_email_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customer_email_prompt_str" />

        <EditText
            android:id="@+id/customer_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/customer_email_prompt_str"
            android:inputType="textWebEmailAddress" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/customer_address_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customer_address_prompt_str" />

        <EditText
            android:id="@+id/customer_address_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/customer_address_1_prompt_str" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:gravity="end">

        <EditText
            android:id="@+id/customer_address_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/customer_address_2_prompt_str" />
    </TableRow>

    <TableRow android:gravity="end">

        <EditText
            android:id="@+id/customer_address_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/customer_address_3_prompt_str" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/customer_city_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customer_city_prompt_str" />

        <EditText
            android:id="@+id/customer_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/customer_city_prompt_str" />
    </TableRow>

    <TableRow
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/customer_state_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customer_state_prompt_str" />

        <Spinner
            android:id="@+id/customer_state_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/state_array"
            android:hint="@string/customer_state_prompt_str" />
    </TableRow>

    <TableRow android:paddingBottom="@dimen/main_btn_vertical_margin">

        <TextView
            android:id="@+id/customer_zip_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customer_zip_prompt_str" />

        <EditText
            android:id="@+id/customer_zip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/customer_zip_prompt_str"
            android:maxLength="5" />
    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/cancel_add_customer_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="cancelAddCustomer"
            android:text="@string/cancel_btn_str" />

        <Button
            android:id="@+id/submit_add_customer_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="submitAddCustomer"
            android:text="@string/customer_insert_btn_str" />
    </TableRow>
</TableLayout>
